force-app/main/default/objects/dx_cmpNavigation__mdt/dx_cmpNavigation__mdt.object-meta.xml
<CustomObject>
    <description>Holds the component navigation, and some display characteristics</description>
    <label>dx_cmpNavigation</label>
    <pluralLabel>dx_cmpNavigation</pluralLabel>
</CustomObject>