force-app/main/default/objects/dx_cmpNavigation__mdt/fields/CmpHome__c.field-meta.xml
<CustomField>
    <fullName>CmpHome__c</fullName>
    <description>If they cancel, here is the home component</description>
    <label>CmpHome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>