force-app/main/default/objects/dx_cmpNavigation__mdt/fields/DetailCmp__c.field-meta.xml
<CustomField>
    <fullName>DetailCmp__c</fullName>
    <description>Name of the detail page for this item.  Used for navigating from the list page to the individual form</description>
    <label>DetailCmp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>