force-app/main/default/objects/dx_cmpNavigation__mdt/fields/NextCmp__c.field-meta.xml
<CustomField>
    <fullName>NextCmp__c</fullName>
    <description>developer name of the next component to display</description>
    <label>NextCmp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>