force-app/main/default/objects/dx_cmpNavigation__mdt/fields/PrevCmp__c.field-meta.xml
<CustomField>
    <fullName>PrevCmp__c</fullName>
    <description>Component to display when previous button is pushed</description>
    <label>PrevCmp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>