force-app/main/default/objects/dx_cmpNavigation__mdt/fields/SaveAddLabel__c.field-meta.xml
<CustomField>
    <fullName>SaveAddLabel__c</fullName>
    <defaultValue>"Save and Add another"</defaultValue>
    <label>SaveAddLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>