force-app/main/default/objects/dx_cmpNavigation__mdt/fields/ShowExitNoSaveButton__c.field-meta.xml
<CustomField>
    <fullName>ShowExitNoSaveButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowExitNoSaveButton</label>
    <type>Checkbox</type>
</CustomField>