force-app/main/default/objects/dx_cmpNavigation__mdt/fields/ShowNextButton__c.field-meta.xml
<CustomField>
    <fullName>ShowNextButton__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ShowNextButton</label>
    <type>Checkbox</type>
</CustomField>