force-app/main/default/objects/dx_cmpNavigation__mdt/fields/ShowSaveAddButton__c.field-meta.xml
<CustomField>
    <fullName>ShowSaveAddButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowSaveAddButton</label>
    <type>Checkbox</type>
</CustomField>