force-app/main/default/objects/dx_cmpNavigation__mdt/fields/ShowSaveExitButton__c.field-meta.xml
<CustomField>
    <fullName>ShowSaveExitButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowSaveExitButton</label>
    <type>Checkbox</type>
</CustomField>