force-app/main/default/objects/dx_cmpNavigation__mdt/fields/ShowSkipButton__c.field-meta.xml
<CustomField>
    <fullName>ShowSkipButton__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ShowSkipButton</label>
    <type>Checkbox</type>
</CustomField>