force-app/main/default/objects/dx_cmpNavigation__mdt/fields/SkipLabel__c.field-meta.xml
<CustomField>
    <fullName>SkipLabel__c</fullName>
    <defaultValue>"Skip this"</defaultValue>
    <label>SkipLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>