force-app/main/default/objects/dx_cmpNavigation__mdt/fields/Valid_for_App_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Valid_for_App_Record_Types__c</fullName>
    <description>Describes the application types that this navigation and display will work for.  Can be used to tailor navigation or button display for a specific app record type.</description>
    <label>Valid for App Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>