force-app/main/default/objects/dx_cmpNavigation__mdt/fields/ValidLicenseTypeList__c.field-meta.xml
<CustomField>
    <fullName>ValidLicenseTypeList__c</fullName>
    <description>Looks like a multi-select picklist of license types that this screen should appear on.</description>
    <label>ValidLicenseTypeList</label>
    <length>255</length>
    <type>Text</type>
</CustomField>